[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/maps/big_map_controller.gd" id="script"]
[ext_resource type="Texture2D" path="res://assets/tagforce/backgrounds/big_map/w_day/bm_island_1.png" id="island"]

[node name="BigMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.35, 0.65, 1)

[node name="IslandTexture" type="TextureRect" parent="." unique_name_in_owner=true]
layout_mode = 0
offset_left = 40
offset_top = 10
offset_right = 440
offset_bottom = 250
texture = ExtResource("island")
expand_mode = 1
stretch_mode = 5

[node name="CursorSprite" type="Node2D" parent="." unique_name_in_owner=true]
position = Vector2(240, 120)

[node name="Dot" type="Sprite2D" parent="CursorSprite"]
modulate = Color(1, 0.3, 0.3, 1)
scale = Vector2(0.5, 0.5)

[node name="Ring" type="Sprite2D" parent="CursorSprite"]
modulate = Color(1, 1, 0, 0.8)
scale = Vector2(0.8, 0.8)

[node name="InfoPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 10
offset_top = 240
offset_right = 470
offset_bottom = 268

[node name="HBox" type="HBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="InfoPanel/HBox" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
text = "Academy Courtyard"
add_theme_font_size_override/font_size = 12

[node name="TimeLabel" type="Label" parent="InfoPanel/HBox" unique_name_in_owner=true]
layout_mode = 2
horizontal_alignment = 2
text = "Day - Day 1"
add_theme_font_size_override/font_size = 12
